src/snapshots/claptrap__tests__command__subcommand_help_heading.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_11f6557c'
[1m[4mUsage:[0m [1mmyprog[0m [COMMAND]

[1m[4mThings:[0m
  [1msub[0m   
  [1mhelp[0m  Print this message or the help of the given subcommand(s)

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_11f6557c
exit 0
