src/snapshots/claptrap__tests__command__subcommand_precedence_over_arg.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='sub'
claptrap_arg=('1' '2' '3')
