src/snapshots/claptrap__tests__command__subcommands.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='subcommand::nested'
claptrap_subcommand_nested_arg3=('one' 'two')
