src/snapshots/claptrap__tests__command__version.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_72ffdf99'
myprog v0.1.24
EOF_72ffdf99
exit 0
