src/snapshots/claptrap__tests__command__visible_aliases.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_input='config.txt'
