src/snapshots/claptrap__tests__command__visible_long_flag_aliases-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_76d04660'
[1m[4mUsage:[0m [1mprog[0m [COMMAND]

[1m[4mCommands:[0m
  [1mtest[0m, [1m--test[0m  
  [1mhelp[0m          Print this message or the help of the given subcommand(s)

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_76d04660
exit 0
